tests/errors/array/const_index_past_end_errors.err.expected
error: at 7:13: [TC-ArrayIndexOutOfBounds] In function 'f', block 'entry': Array index 3 out of bounds for [_; 3]
   |
 7 |             r = &mut a[3i64];
   |             ^^^^^^^^^^^^^^^^
